--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
 
+
  body > main > section {
     width: 1000px;
     margin: auto;
+    margin-top: 20px;
  }
+
+ #News {
+    width: 1000px;
+    margin-top: 20px;
+
+     }
 
  body h1{
     font-family: "Abril Fatface", cursive;
@@ -31,13 +39,24 @@ body h3{
 }
 
 article {
-    max-width: 33%;
-    display: inline-block;
+    max-width: 32%;
+    display: inline-block; 
+    border: 1px solid #000;
+    padding: 1px;
+    margin: 1px;
+    
 }
 
 article img {
     width: 100%;
     height: 100px;
+}
+
+.article-image{
+    width: 100%;
+    height: 200px; 
+    background-size: cover !important; 
+    background-position: center !important;
 }
 
 body {
