--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap');
+
 
 
  body > main > section {
@@ -13,9 +15,13 @@
     margin-top: 20px;
 
      }
-
+ 
+ body{
+     font-family: 'Montserrat', sans-serif;
+     font-weight: 300 !important;
+ }
  body h1{
-    font-family: "Abril Fatface", cursive;
+    font-family: "Dancing Script", cursive;
     font-weight: 300;
     text-align: center;
     margin: 50px 50px;
@@ -27,6 +33,7 @@ body h3{
     text-align: center;  
 }
 
+
 #main-header {
     border: 1px solid beige;
     border-bottom-left-radius:45px;
@@ -36,6 +43,17 @@ body h3{
 #main-header > h3 {
     margin-left: 300px;
     margin-right: 50px;   
+}
+
+#site-title {
+    font-family: 'Dancing Script', sans-serif;
+}
+
+.more-link{
+    font-style: italic;
+}
+.bolded-link{
+    font-weight: 700;
 }
 
 article {
