--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
  body{
      font-family: 'Montserrat', sans-serif;
      font-weight: 300 !important;
+     
  }
  body h1{
     font-family: "Dancing Script", cursive;
@@ -33,6 +34,14 @@ body h3{
     text-align: center;  
 }
 
+body h2{
+    text-shadow: 1px 1px 4px rgba(245, 245, 220, 0.8);
+}
+
+a{
+    text-decoration:none;
+    
+}
 
 #main-header {
     border: 1px solid beige;
@@ -53,7 +62,11 @@ body h3{
     font-style: italic;
 }
 .bolded-link{
-    font-weight: 700;
+    font-weight: 100;
+}
+
+.more-link.bolded-link{
+    color: beige;
 }
 
 article {
@@ -62,6 +75,7 @@ article {
     border: 1px solid #000;
     padding: 1px;
     margin: 1px;
+    box-shadow: 0px 0px 20px rgba(245, 245, 220, 0.4) ;
     
 }
 
