--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps:wght@400;700&display=swap');
 
 
 
@@ -8,29 +8,30 @@
     width: 1000px;
     margin: auto;
     margin-top: 20px;
- }
+}
 
  #News {
     width: 1000px;
     margin-top: 20px;
 
-     }
+}
  
  body{
      font-family: 'Montserrat', sans-serif;
-     font-weight: 300 !important;
-     
- }
+     font-weight: 300 !important;    
+}
+
  body h1{
-    font-family: "Dancing Script", cursive;
     font-weight: 300;
     text-align: center;
-    margin: 50px 50px;
- }
+    margin: 40px;
+    position: absolute;
+    z-index: 6;
+}
 
 body h3{
-    font-family:"Bungee", cursive ;
-    font-weight: 300;
+    font-family:'Montserrat', sans-serif;
+    font-weight: 800;
     text-align: center;  
 }
 
@@ -39,8 +40,7 @@ body h2{
 }
 
 a{
-    text-decoration:none;
-    
+    text-decoration:none;   
 }
 
 a:hover, a.more-link.bolded-link:hover {
@@ -67,38 +67,91 @@ a:hover, a.more-link.bolded-link:hover {
 
 #main-header {
     border: 1px solid rgb(245, 245, 220);
-    border-bottom-left-radius:45px;
-    border-top-right-radius:45px;  
+    border-radius: 30px;    
+    left: 0px; 
+    
+    
 }
 
 #main-header > h3 {
     margin-left: 300px;
-    margin-right: 50px;   
+    margin-right: 300px;
+    padding: 5px;    
 }
 
-#site-title {
-    font-family: 'Dancing Script', sans-serif;
+
+#main-header::after {
+    content: "";
+    display: block;
+    width: 10px;
+    height: 83px;
+    background: rgb(245, 245, 220);
+    position: absolute;
+    top: 28px;
+    left: 25px;
+    z-index: 2;
+    border: 1px solid rgb(245,245,220);
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
 }
 
-.more-link{
-    font-style: italic;
+#main-header::before {
+    content: "";
+    display: block;
+    width: 10px;
+    height: 83px;
+    background: rgb(245, 245, 220);
+    position: absolute;
+    top: 28px;
+    right: 25px;
+    z-index: 2;
+    border: 1px solid rgb(245,245,220);
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
 }
-.bolded-link{
-    font-weight: 100;
+
+#site-title-left{
+    font-family: 'Oleo Script Swash Caps', cursive;
+}
+
+#site-title-right{
+    font-family: 'Oleo Script Swash Caps', cursive;
+    margin-left: 910px;
+}
+
+.lorem-ipsum {
+    text-align:justify;
+}
+
+.my-text{
+    width: 1000px;
+    height: 400px;
+    max-height: 200px;
+    overflow: scroll;
+    overflow-x: hidden;
+    border: 1px solid rgb(245, 245, 220);
+    margin-top: 5px;
 }
 
 .more-link.bolded-link{
+    font-style: italic;
+    font-weight: 100;
     color: rgb(245, 245, 220);
+    transition: color .5s;
+}
+
+.more-link.bolded-link:hover{
+    color: #442e10 ;
 }
 
 article {
     max-width: 32%;
     display: inline-block; 
-    border: 1px solid #000;
+    border: 1px solid rgb(245,245,220);
     padding: 1px;
     margin: 1px;
     box-shadow: 0px 0px 20px rgba(245, 245, 220, 0.4) ;
-    
+    transition: box-shadow .5s, background .5s, color .5s ;
 }
 
 article img {
@@ -115,6 +168,12 @@ article img {
 
 article:active{
     opacity: .5;
+}
+
+article:hover{
+    box-shadow: 0px 0px 40px rgba(245, 245, 220, 0.8) ; 
+    background: rgb(245, 245, 220);
+    color: #442e10;
 }
 
 body {
