--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body h3{
 }
 
 body h2{
-    text-shadow: 1px 1px 4px rgba(245, 245, 220, 0.8);
+    text-shadow: 1px 1px 4px rgb(255, 251, 233, 0.8);
 }
 
 a{
@@ -44,29 +44,30 @@ a{
 }
 
 a:hover, a.more-link.bolded-link:hover {
-    color:rgb(245, 245, 220);
+    color:rgb(255, 251, 233);
 }
 
 .search-input{
     display: block;
     width: 25%;
+    height: 10px;
     margin: auto;
-    margin-bottom: 18px;
+    margin-bottom: 15px;
     padding: 5px 10px;
     float: right;
     font-family: 'Montserrat', sans-serif;
 }
 
 .search-input:focus{
-    background-color: rgb(245, 245, 220);
+    background-color: rgb(255, 251, 233);
     color: #442e10;
     outline: none;
-    border: 1px solid #a9895c;
+    border: 1px solid rgb(227, 202, 165);
     font-family: 'Montserrat', sans-serif;
 }
 
 #main-header {
-    border: 1px solid rgb(245, 245, 220);
+    border: 1px solid rgb(255, 251, 233);
     border-radius: 30px;    
     left: 0px; 
     
@@ -85,12 +86,12 @@ a:hover, a.more-link.bolded-link:hover {
     display: block;
     width: 10px;
     height: 83px;
-    background: rgb(245, 245, 220);
+    background: rgb(255, 251, 233);
     position: absolute;
     top: 28px;
     left: 25px;
     z-index: 2;
-    border: 1px solid rgb(245,245,220);
+    border: 1px solid rgb(255, 251, 233);
     border-top-left-radius: 30px;
     border-bottom-left-radius: 30px;
 }
@@ -100,12 +101,12 @@ a:hover, a.more-link.bolded-link:hover {
     display: block;
     width: 10px;
     height: 83px;
-    background: rgb(245, 245, 220);
+    background: rgb(255, 251, 233);
     position: absolute;
     top: 28px;
     right: 25px;
     z-index: 2;
-    border: 1px solid rgb(245,245,220);
+    border: 1px solid rgb(255, 251, 233);
     border-top-right-radius: 30px;
     border-bottom-right-radius: 30px;
 }
@@ -129,14 +130,14 @@ a:hover, a.more-link.bolded-link:hover {
     max-height: 200px;
     overflow: scroll;
     overflow-x: hidden;
-    border: 1px solid rgb(245, 245, 220);
+    border: 1px solid rgb(255, 251, 233);
     margin-top: 5px;
 }
 
 .more-link.bolded-link{
     font-style: italic;
     font-weight: 100;
-    color: rgb(245, 245, 220);
+    color: rgb(255, 251, 233);
     transition: color .5s;
 }
 
@@ -147,10 +148,10 @@ a:hover, a.more-link.bolded-link:hover {
 article {
     max-width: 32%;
     display: inline-block; 
-    border: 1px solid rgb(245,245,220);
+    border: 1px solid rgb(255, 251, 233);
     padding: 1px;
     margin: 1px;
-    box-shadow: 0px 0px 20px rgba(245, 245, 220, 0.4) ;
+    box-shadow: 0px 0px 20px rgb(255, 251, 233, 0.4) ;
     transition: box-shadow .5s, background .5s, color .5s ;
 }
 
@@ -171,18 +172,18 @@ article:active{
 }
 
 article:hover{
-    box-shadow: 0px 0px 40px rgba(245, 245, 220, 0.8) ; 
-    background: rgb(245, 245, 220);
+    box-shadow: 0px 0px 40px rgb(255, 251, 233, 0.8) ; 
+    background: rgb(255, 251, 233);
     color: #442e10;
 }
 
 body {
     background: #442e10;
-    color: rgb(245, 245, 220);
+    color: rgb(255, 251, 233);
 }
 
 body > header > h3 {
-    background: rgb(245, 245, 220);
+    background: rgb(255, 251, 233);
     color: #442e10;
 }
 
