--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,24 @@ a:hover, a.more-link.bolded-link:hover {
     color:rgb(255, 251, 233);
 }
 
+#search-button {
+    display: inline-block;
+    height: 24px;
+    font-family: 'Montserrat', sans-serif;
+    margin: auto;
+    margin-left: 1035px;
+}
+
+#text-2 {
+    display: inline-block;
+    width: 100%;
+    height: 24px;
+    margin: auto;
+    margin-bottom: 15px;
+    text-align: right;
+    font-family: 'Montserrat', sans-serif;
+}
+
 .search-input{
     display: block;
     width: 25%;
@@ -63,6 +81,23 @@ a:hover, a.more-link.bolded-link:hover {
     color: #442e10;
     outline: none;
     border: 1px solid rgb(227, 202, 165);
+    font-family: 'Montserrat', sans-serif;
+}
+
+.customer-name, .customer-surname, .subject {
+    display: block;
+    width: 25%;
+    height: 10px;
+    padding: 5px 10px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.customer-message {
+    display: block;
+    resize: none;
+    width: 25%;
+    height: 50px;
+    padding: 5px 10px;
     font-family: 'Montserrat', sans-serif;
 }
 
