--- a/css/style.css
+++ b/css/style.css
@@ -39,8 +39,11 @@ body h2{
     text-shadow: 1px 1px 4px rgb(255, 251, 233, 0.8);
 }
 
+
+
 a{
     text-decoration:none;   
+    color:rgb(255, 251, 233);
 }
 
 a:hover, a.more-link.bolded-link:hover {
@@ -105,6 +108,7 @@ a:hover, a.more-link.bolded-link:hover {
     border: 1px solid rgb(255, 251, 233);
     border-radius: 30px;    
     left: 0px; 
+    text-align: center;
     
     
 }
@@ -112,9 +116,64 @@ a:hover, a.more-link.bolded-link:hover {
 #main-header > h3 {
     margin-left: 300px;
     margin-right: 300px;
-    padding: 5px;    
+    padding: 5px;
+    padding-right: 150px;
+    padding-left: 150px;   
 }
 
+.menu {
+    list-style: none;
+    margin: 52px;
+    margin-left: 35px;
+    margin-bottom: 17px;
+    padding: unset;
+    position: absolute;
+    z-index: 1;
+    list-style: none;
+    float: left;
+    
+}
+
+.menu-trigger{
+    float: left;
+    padding-bottom: 55px;
+}
+
+.submenu {
+    list-style: none;
+    position: absolute;
+    top: 71px;
+    padding: 10px 10px;
+    text-align: left;
+    padding: 0px;
+    border: 1px solid #442e10;
+    background: #442e10;
+    box-shadow: 2px 2px 10px #442e10;
+    float: left;
+    z-index: 1;
+    width: 263px;
+    display: none;
+}
+
+
+
+.submenu a{
+    list-style: none;
+    display: block;
+    text-align: left;
+    padding: 10px 10px;
+    padding-left: unset;
+    z-index: 1;
+}
+
+.submenu a:hover {
+    background-color: rgb(255, 251, 233);
+    color: #442e10;
+}
+
+.submenu.active {
+    display: block;
+}
 
 #main-header::after {
     content: "";
@@ -144,15 +203,6 @@ a:hover, a.more-link.bolded-link:hover {
     border: 1px solid rgb(255, 251, 233);
     border-top-right-radius: 30px;
     border-bottom-right-radius: 30px;
-}
-
-#site-title-left{
-    font-family: 'Oleo Script Swash Caps', cursive;
-}
-
-#site-title-right{
-    font-family: 'Oleo Script Swash Caps', cursive;
-    margin-left: 1320px;
 }
 
 .lorem-ipsum {
